--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 				<div class = "text-container">
-						<span class="header">Welcome</span>
+						<span class="header">Welcome!!</span>
 				</div>
 			</div>
 
