--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div><!-- /.container-fluid -->
               </nav>
         				<div class = "text-container">
-        				      <span class="header">WELCOME</span>
+        				      <span class="header">Welcome</span>
         				</div>
 			   </div>
 
@@ -89,20 +89,19 @@
 	        	</div>
 	        </div>
 
-	        <div class = "parallax", id= "California">
+	        <div class = "parallax", id= "Debate">
 	        	<span class="header", id = "orange_color">I am from California</span>
 	        </div>
 
-          <div class = "parallax", id= "Debate">
-	        	<span class="header", id = "orange_color">I did Policy Debater for 8 Years</span>
-	        </div>
-          
 	        <div class="fourth_panel">
 	        	<div class = "text-container">
 					<span class="header" id = "blue_color">Areas of Interest</span>
 				    </div>
 	        </div>
 
+	        <div class = "parallax", id= "Debate">
+	        	<span class="header", id = "orange_color">I did Policy Debater for 8 Years</span>
+	        </div>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
