--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-			<div style = "background-image: url('sharp_background.png')" class = imgcontainer>
+			<div style = "background-image: url('images/sharp_background.png')" class = imgcontainer>
 			</div>
 
       <div class = "content-container">
@@ -69,7 +69,7 @@
                 </div><!-- /.container-fluid -->
               </nav>
         				<div class = "text-container">
-        				      <span class="header">Welcome</span>
+        				      <span class="header">Testing</span>
         				</div>
 			   </div>
 
@@ -89,7 +89,7 @@
 	        	</div>
 	        </div>
 
-	        <div class = "parallax", id= "Debate">
+	        <div class = "parallax", id= "California">
 	        	<span class="header", id = "orange_color">I am from California</span>
 	        </div>
 
