beautified the site

--- a/index.html
+++ b/index.html
@@ -69,38 +69,42 @@
                 </div><!-- /.container-fluid -->
               </nav>
         				<div class = "text-container">
-        				      <span class="header">Testing</span>
+        				      <span class="big_header">Welcome</span>
         				</div>
 			   </div>
 
-	        <div class="first_panel">
+	        <div class="blue_white_panel">
 	        	<div class = "text-container">
-					         <span class="header">About Me</span>
+					         <span class="header">About Me - I'm a Dartmouth '20...</span>
 				    </div>
 	        </div>
 
 	        <div class = "parallax", id= "snow">
-	           <span class="header", id = "orange_color">I am a Dartmouth '20</span>
+	           <span class="header", id = "orange_color"> ...and a twin! (the one on the right)</span>
 	        </div>
 
-	        <div class="third_panel">
+	        <div class="orange_white_panel">
 	        	<div class = "text-container">
-	        		<span class="header">Orange is my Favorite Color!</span>
+	        		<span class="header">Orange is my Favorite Color</span>
 	        	</div>
 	        </div>
 
 	        <div class = "parallax", id= "California">
-	        	<span class="header", id = "orange_color">I am from California</span>
+	        	<span class="header", id = "white_color">I am from California</span>
 	        </div>
 
-	        <div class="fourth_panel">
+
+          <div class = "parallax", id= "Debate">
+            <span class="header", id = "white_color">I did Policy Debater for 8 Years</span>
+          </div>
+
+	        <div class="blue_white_panel">
 	        	<div class = "text-container">
-					<span class="header" id = "blue_color">Areas of Interest</span>
+					<span class="header" id = "white_color"> I enjoy the feeling of programming projects that will be useful to people.
+                  Im excited to work with DALI because
+                  collaborating with motivated people on a common vision really excites me.
+                  </span>
 				    </div>
-	        </div>
-
-	        <div class = "parallax", id= "Debate">
-	        	<span class="header", id = "orange_color">I did Policy Debater for 8 Years</span>
 	        </div>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
