--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				    </div>
 	        </div>
 
-	        <div class = "parallax", id= "snow">
+	        <div class = "parallax", id= "grad">
 	           <span class="header", id = "orange_color"> ...and a twin! (the one on the right)</span>
 	        </div>
 
@@ -47,7 +47,7 @@
 
 	        <div class="blue_white_panel">
 	        	<div class = "text-container">
-					<span class="header" id = "white_color"> I enjoy the feeling of programming projects that will be useful to people.
+					<span class="header" id = "white_color"> I enjoy programming projects that will be useful to people.
                   Im excited to work with DALI because
                   collaborating with motivated people on a common vision really excites me.
                   </span>
@@ -56,7 +56,5 @@
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
-		<script type = "text/javascript" src="index.js" ></script>
     </body>
 </html>
