testing to see how changes translate

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class = "content-container">
         <div class = "text-container">
-        	 <span class="big_header">Welcome</span>
+        	 <span class="big_header">Welcome.</span>
         </div>
 			   </div>
 
