added green color to website at the bottom

--- a/index.html
+++ b/index.html
@@ -40,19 +40,36 @@
 	        	<span class="header", id = "white_color">I am from California</span>
 	        </div>
 
-
           <div class = "parallax", id= "Debate">
             <span class="header", id = "white_color">I did Policy Debater for 8 Years</span>
           </div>
 
-	        <div class="blue_white_panel">
+          <div class="green_white_panel">
 	        	<div class = "text-container">
-					<span class="header" id = "white_color"> I enjoy programming projects that will be useful to people.
+
+				    </div>
+	        </div>
+
+          <div class = "parallax", id= "Baker">
+            <span class="header", id = "white_color">and I'm into painting</span>
+          </div>
+
+
+
+	        <div class="green_white_panel">
+	        	<div class = "text-container">
+					         <span class="header" id = "white_color"> I enjoy programming projects that will be useful to people.
                   Im excited to work with DALI because
                   collaborating with motivated people on a common vision really excites me.
                   </span>
 				    </div>
 	        </div>
+
+          <div class="green_white_panel">
+            <div class = "text-container">
+
+            </div>
+          </div>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
