--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     </head>
     <body>
 
+      <!-- Top of the page gemotrical background-->
 			<div style = "background-image: url('images/sharp_background.png')" class = imgcontainer>
 			</div>
 
+      <!-- Various panels and parallax scroll images-->
       <div class = "content-container">
         <div class = "text-container">
         	 <span class="big_header">Welcome</span>
@@ -44,6 +46,7 @@
             <span class="header", id = "white_color">I did Policy Debater for 8 Years</span>
           </div>
 
+          <!-- where the "frame" for the baker tower painting begins-->
           <div class="green_white_panel">
 	        	<div class = "text-container">
 
