fixed spelling error

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	        </div>
 
           <div class = "parallax", id= "Debate">
-            <span class="header", id = "white_color">I did Policy Debater for 8 Years</span>
+            <span class="header", id = "white_color">I did Policy Debate for 8 Years</span>
           </div>
 
           <!-- where the "frame" for the baker tower painting begins-->
@@ -75,6 +75,7 @@
           </div>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="index.js"></script>
 
     </body>
 </html>
